--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,202 +13,5 @@
     <link href="https://fonts.googleapis.com/css?family=Geo" rel="stylesheet" async>
   </head>
 
-  <body class="main2">
-    <div class="row">
-      <div class="col-lg left-and-center-nav">
-        <div class="row">
-          <div class="col-md-4 mail-left">
-            <div class="sidebar-item" style="display: flex">
-              <img src="https://phantasma.io/img/phantasma_logo.svg" width="32" style="margin-right: 10px" /> <span class="current_identity">demo@phantasma.io</span>
-            </div>
-
-            <div class="sidebar-item">
-              <a id="composeBtn" class="btn btn-primary"><i class="fa fa-edit"></i> New message</a>
-            </div>
-            <br/>
-
-            <div id="inboxSection" class="sidebar-item selectable">
-              <i class="fa fa-inbox"></i>Inbox
-            </div>
-
-            <div id="sentSection" class="sidebar-item selectable">
-              <i class="fa fa-location-arrow"></i>Sent
-            </div>
-
-            <div id="draftSection" class="sidebar-item selectable">
-              <i class="fa fa-file"></i>Draft
-            </div>
-
-            <div id="importantSection" class="sidebar-item selectable">
-              <i class="fa fa-star"></i>Important
-            </div>
-
-            <div id="trashSection" class="sidebar-item selectable">
-              <i class="fa fa-trash"></i>Trash
-            </div>
-
-            <div class="sidebar-divider"></div>
-
-            <div class="sidebar-item selectable">
-              <i class="fa fa-envelope"></i>Mail
-            </div>
-
-            <div class="sidebar-item selectable">
-              <i class="fa fa-connectdevelop"></i>Wallet
-            </div>
-<!--
-            <div class="sidebar-item ">
-              SETTINGS
-            </div>
--->
-            <div class="sidebar-divider"></div>
-
-            <div class="sidebar-item">
-              <a href="#"><i class="fa fa-sign-out"></i>Forget me</a>
-            </div>
-          </div>
-
-          <div class="col-md-8 mail-center">
-            <div class="search">
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <span id="mail-search-submit" class="input-group-text"><i class="fa fa-search"></i></span>
-                </div>
-                <input type="text" class="form-control" id="mail-search" placeholder="Search Mail" required="true">
-              </div>
-            </div>
-
-            <div class="clearfix sort">
-              <div class="pull-right">
-                <span class="sel">Sort: Newest First</span><span class="control"><i class="fa fa-chevron-down"></i></span>
-              </div>
-            </div>
-
-            <div class="message-list"></div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-5 mail-right" style="display: none">
-        <!--
-        <div class="pane more">
-          <div class="relative-date">
-            <%= time_ago_in_words(Time.now - 21.hours).capitalize %> ago
-          </div>
-
-          <div class="body">
-            The network itself requires minimal structure. Messages are broadcast on a best effort
-basis, and nodes can leave and rejoin the network at will, accepting the longest
-proof-of-work chain as proof of what happened while they were gone.
-          </div>
-
-          <div class="accent"></div>
-        </div>
-      -->
-      </div>
-    </div>
-  </body>
+  <%= yield %>
 </html>
-
-<%= render "compose" %>
-
-<script>
-var setWindowSize = function() {
-  document.getElementsByClassName('mail-left')[0].style.height = window.innerHeight + 'px';
-  document.getElementsByClassName('mail-center')[0].style.height = window.innerHeight + 'px';
-  document.getElementsByClassName('mail-right')[0].style.height = window.innerHeight + 'px';
-};
-
-setWindowSize();
-
-window.addEventListener('resize', setWindowSize);
-
-window.render = function() {
-  PH.saveData();
-
-  // Nav tab identity
-  document.getElementsByClassName('current_identity')[0].innerHTML = PH.state.wallets[PH.state.mainWallet].name;
-
-  // Section tab selected
-  document.getElementById(PH.state.section + 'Section').className += ' selected';
-
-  // Section tab links
-  /*
-  var elems = document.getElementsByClassName('selectable');
-  for (var i = 0; i < elems.length; ++i) {
-    elems[i].onclick = function(event) {
-      event.preventDefault();
-      var section = event.target.id.replace('Section', '');
-      PH.state.section = section;
-      render();
-    };
-  }
-  */
-
-  // Center pane content
-  var content = "";
-  for (var i = 0; i < PH.state.inbox.items.length; ++i) {
-    var elem = PH.state.inbox.items[i];
-    var timeStr = new Date(elem.time * 1000).toLocaleDateString();
-    content += '<div class="message"><div class="clearfix title"><span class="pull-left mail-title">' + PH.trunc(elem.title) + '</span><span class="pull-right mail-date">' + timeStr + '</span></div><div class="body">' + PH.trunc(elem.body, 160) + '</div><div class="clearfix footer"><span class="pull-left name"><b>' + PH.trunc(elem.from_name) + '</b></span><span class="address">' + PH.trunc(elem.from) + '</span></span><span class="pull-right address">' + PH.trunc(elem.to) + '</span></div></div>';
-  }
-  var container = document.getElementsByClassName('message-list')[0];
-  container.innerHTML = content;
-
-  // Center pane content message selection
-  for (var i = 0; i < container.children.length; ++i) {
-    container.children[i].onclick = function(event) {
-      event.preventDefault();
-
-      if (PH.state.inbox.selected === this + 0) {
-        PH.state.inbox.selected = -1;
-      } else {
-        PH.state.inbox.selected = this + 0;
-      }
-      render();
-    }.bind(i);
-  }
-
-  // Right pane
-  if (PH.state.inbox.selected === -1) {
-    var centerPane = document.getElementsByClassName('mail-center')[0];
-    centerPane.style.paddingRight = '2rem';
-    var rightPane = document.getElementsByClassName('mail-right')[0];
-    rightPane.style.display = 'none';
-  } else {
-    var centerPane = document.getElementsByClassName('mail-center')[0];
-    centerPane.style.paddingRight = null;
-    var rightPane = document.getElementsByClassName('mail-right')[0];
-    rightPane.style.display = null;
-    var content = "";
-    var message = PH.state.inbox.items[PH.state.inbox.selected];
-
-    var content = '<div class="pane"><div class="clearfix controls"><div class="pull-left mail-nav"><i class="fa fa-arrow-left msgNav" id="prevMsg"></i><i class="fa fa-arrow-right msgNav" id="nextMsg" style="margin-left: 1rem;"></i></div><div class="pull-right options"><i class="fa fa-ellipsis-v"></i></div></div><div class="relative-date">' + message.time + '</div><div class="people">' + message.from + ' <span class="ligature">to</span> ' + message.to + '</div><div class="title">' + message.title + '</div><div class="body">' + message.body + '</div></div>';
-    rightPane.innerHTML = content;
-
-    // Right pane - top nav arrows
-    if (PH.state.inbox.selected === 0) {
-      document.getElementById('prevMsg').className += " disabled";
-    } else {
-      document.getElementById('prevMsg').onclick = function(event) {
-        event.preventDefault();
-
-        PH.state.inbox.selected -= 1;
-        render();
-      };
-    }
-    if (PH.state.inbox.selected === PH.state.inbox.items.length - 1) {
-      document.getElementById('nextMsg').className += " disabled";
-    } else {
-      document.getElementById('nextMsg').onclick = function(event) {
-        event.preventDefault();
-
-        PH.state.inbox.selected += 1;
-        render();
-      };
-    }
-  }
-};
-
-PH.afterLoad(render);
-</script>
