--- a/app/views/application/_compose.html.erb
+++ b/app/views/application/_compose.html.erb
@@ -7,12 +7,12 @@
       <div class="modal-body">
         <div class="form-group">
           <label for="recipient" class="control-label">Recipient</label>
-          <input type="text" required class="form-control" id="recipient" name="recipient" placeholder="friend@phantasma.io" />
+          <input type="text" required class="form-control" id="recipient" name="recipient" placeholder="Phantasma address" autocomplete="off" />
         </div>
 
         <div class="form-group">
           <label for="message" class="control-label">Message</label>
-          <input type="text" required class="form-control" id="message" name="message" placeholder="Hello world..." />
+          <input type="text" required class="form-control" id="message" name="message" placeholder="Welcome to Phantasma" autocomplete="off" />
         </div>
       </div>
       <div class="modal-footer">
