--- a/app/views/application/_first_wallet.html.erb
+++ b/app/views/application/_first_wallet.html.erb
@@ -22,7 +22,11 @@ if (PH.state.wallets.length === 0) {
       window.render();
       $("#firstWallet").modal('hide');
 
-      PH.contract.registerMailbox(friendlyName);
+      PH.contract.registerMailbox(friendlyName, function() {
+        PH.contract.fetchInbox(function() {
+          render(); // rerender what is needed
+        });
+      });
     } catch (e) {
       document.getElementById('alert-area').style.display = 'block';
     }
@@ -45,7 +49,7 @@ if (PH.state.wallets.length === 0) {
         <form>
           <div class="form-group">
             <label for="wallet_priv_key" class="control-label">Private key (hex-format, 64 characters)</label>
-            <input type="password" required class="form-control select2-offscreen" id="wallet_priv_key" name="wallet_priv_key" placeholder="Private key" autocomplete="off" />
+            <input type="password" required class="form-control select2-offscreen" id="wallet_priv_key" name="wallet_priv_key" placeholder="Private key" autocomplete="off" value="<%= ENV['DEFAULT_TESTING_ADDRESS'] %>" />
           </div>
 
           <div class="form-group">
@@ -55,7 +59,7 @@ if (PH.state.wallets.length === 0) {
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" onclick="addWallet(event)" class="btn pretty-btn">Add</button>
+        <button type="button" onclick="addWallet(event)" class="btn btn-primary">Add</button>
       </div>
     </div>
   </div>
