--- a/app/views/application/disclaimer.html.erb
+++ b/app/views/application/disclaimer.html.erb
@@ -21,7 +21,7 @@ dismissDisclaimer = function(event) {
       <p>Your wallet details will be saved in local storage with a time to live of 7 days. You can delete this information at any time or use a private browser session.</p>
     </div>
 
-    <a href="#" onclick="dismissDisclaimer(event)" class="btn pretty-btn">
+    <a href="#" onclick="dismissDisclaimer(event)" class="btn btn-primary">
       Got it
     </a>
   </div>
