--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="background: #F7FAF9">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Phantasma</title>
